<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<resources xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Asus Transformer Infinity Settings</string>

    <!--CPU -->
    <string name="cpu_settings_title">CPU</string>
    <string name="cpu_mode_title">CPU Mode Switch</string>
    <string name="cpu_settings_summary">Change CPU Power Mode</string>
    <string name="cpu_set_on_boot_title">Set on boot</string>
    <string name="cpu_set_on_boot_summary">Restore the processor settings on boot</string>

    <!-- CPU Modes -->
    <string name="cpu_pwrsv">Power Save</string>
    <string name="cpu_bal">Balanced</string>
    <string name="cpu_perf">Performance</string>

    <!-- Display -->
    <string name="display_settings_title">Display</string>
    <string name="display_msg_failed">Failed to set the display property</string>

    <!-- Display * Smartdimmer -->
    <string name="display_smartdimmer_title">Smartdimmer</string>
    <string name="display_smartdimmer_summary">Enable Nvidia Smartdimmer technology for controlling LCD brightness.</string>

    <!-- Dock -->
    <string name="dock_settings_title">Dock</string>
    <string name="dock_msg_failed">Failed to set the dock property</string>

    <!-- Dock * Power -->
    <string name="dock_power_title">Power</string>
    <string name="dock_ec_wakeup">Keyboard wakes the device up</string>
    <string name="dock_ec_wakeup_summary_on">Pressing any key will wake the device up.</string>
    <string name="dock_ec_wakeup_summary_off">The device will not wake up when pressing a key.</string>

    <!-- Dock * Keypad -->
    <string name="dock_kp_title">Keypad</string>
    <string name="dock_kp_function_keys">Function keys</string>
    <string name="dock_kp_function_keys_summary">Function keys only be triggered with the presence of the <xliff:g id="keys" example="CTRL+SHIFT">%1$s</xliff:g> key combination.</string>
    <string name="dock_kp_function_keys_summary_none">Function keys will be triggered with any key combination.</string>
    <string name="dock_kp_notifications">Display keypad notifications</string>
    <string name="dock_kp_notifications_summary_on">Notifications will be displayed at status bar.</string>
    <string name="dock_kp_notifications_summary_off">Notifications will not be displayed at status bar.</string>
    <string name="kp_wifi_on">Wi-Fi ON</string>
    <string name="kp_wifi_off">Wi-Fi OFF</string>
    <string name="kp_bt_on">Bluetooth ON</string>
    <string name="kp_bt_off">Bluetooth OFF</string>
    <string name="kp_tp_on">TouchPad ON</string>
    <string name="kp_tp_off">TouchPad OFF</string>
    <string name="kp_brightness_manual">Brightness <xliff:g id="brightness">%1$s</xliff:g></string>
    <string name="kp_brightness_auto">Brightness AUTO</string>
    <string name="kp_volume">Volume <xliff:g id="volume">%1$s</xliff:g></string>
    <string name="kp_volume_mute_on">Mute ON</string>
    <string name="kp_volume_mute_off">Mute OFF</string>
    <string name="kp_media_play_pause">Media PLAY/PAUSE</string>
    <string name="kp_media_previous">Media PREVIOUS</string>
    <string name="kp_media_next">Media NEXT</string>
    <string name="kp_screenshot">Take screenshot</string>
    <string name="kp_explorer">Launch browser</string>
    <string name="kp_settings">Launch settings</string>
    <string name="kp_caps_lock_on">Caps-Lock ON</string>
    <string name="kp_caps_lock_off">Caps-Lock OFF</string>

    <!-- GPS -->
    <string name="gps_settings_title">GPS</string>

    <!-- LTO settings -->
    <string name="lto_download_title">LTO Data Download</string>
    <string name="lto_download_enabled_title">Automatic download</string>
    <string name="lto_download_enabled_summary">Download data automatically if a network connection is available</string>
    <string name="lto_download_interval_title">Download interval</string>
    <string name="lto_download_interval_12hours">12 hours</string>
    <string name="lto_download_interval_1day">1 day</string>
    <string name="lto_download_interval_3days">3 days</string>
    <string name="lto_download_interval_1week">1 week</string>
    <string name="lto_download_interval_2weeks">2 weeks</string>
    <string name="lto_download_interval_1month">1 month</string>
    <string name="lto_download_file_title">Download file type</string>
    <string name="lto_download_file_7days">7 days validity</string>
    <string name="lto_download_file_30days">30 days validity</string>
    <string name="lto_download_wifi_only_title">Wifi only</string>
    <string name="lto_download_wifi_only_summary">Only download assistive data over Wifi connection</string>
    <string name="lto_download_now">Download now</string>
    <string name="lto_last_download_date">Last download: %1$s</string>
    <string name="lto_last_download_date_failure">Last download attempt: %1$s (Unsuccessful)</string>
    <string name="lto_last_download_date_never">Last download: Never</string>
    <string name="lto_downloading_data">Downloading data\u2026 (%1$s%%)</string>
    <string name="lto_downloading_data_notification">Downloading LTO data\u2026</string>

</resources>
