<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
     android:title="@string/cpu_settings_title">

    <ListPreference android:key="cpu_settings"
        android:title="@string/cpu_mode_title"
        android:summary="@string/cpu_settings_summary"
        android:entries="@array/cpu_settings_array"
        android:entryValues="@array/cpu_settings_array_values" />

    </PreferenceCategory>

    <PreferenceCategory android:key="general"
                        android:title="@string/general_settings_title">

        <PreferenceScreen android:key="lto_download"
                          android:title="@string/lto_download_title"
                          android:summary="@string/lto_download_summary">

            <CheckBoxPreference android:key="lto_download_enabled"
                                android:title="@string/lto_download_enabled_title"
                                android:summary="@string/lto_download_enabled_summary" />

            <ListPreference android:key="lto_download_interval"
                            android:dependency="lto_download_enabled"
                            android:title="@string/lto_download_interval_title"
                            android:entries="@array/lto_download_interval_entries"
                            android:entryValues="@array/lto_download_interval_values"
                            android:defaultValue="259200" />

            <CheckBoxPreference android:key="lto_download_wifi_only"
                                android:dependency="lto_download_enabled"
                                android:title="@string/lto_download_wifi_only_title"
                                android:summary="@string/lto_download_wifi_only_summary"
                                android:defaultValue="true" />

            <ListPreference android:key="lto_download_file"
                            android:title="@string/lto_download_file_title"
                            android:entries="@array/lto_download_file_entries"
                            android:entryValues="@array/lto_download_file_values"
                            android:defaultValue="7day" />

            <Preference android:key="lto_download_now"
                        android:title="@string/lto_download_now" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
